# todo-aap

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION-INDEX.md  DOCUMENTATION_INDEX.md  FINAL-DELIVERY.md  GITHUB_AUTHENTICATION.md  GITHUB_PUSH_GUIDE.md  IMPLEMENTATION_SUMMARY_PHASE1.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_QUICK_REFERENCE.md  PHASE1_VERIFICATION_REPORT.md  PHASE_1_COMPLETE.md  PHASE_1_STATUS.md  PROJECT-STATUS.md  QUICK-REFERENCE.md  README.md  SPECIFICATIONS_INDEX.md  START-HERE.md  docker-compose.yml  push-to-github.bat  push-to-github.ps1  setup.bat  setup.sh  verify.py  verify.sh
.github/workflows/: ci-cd.yml
.spec-kit/: config.yml
backend/: README.md
backend/phase-1-console/: .coverage  .coveragerc  README.md  pyproject.toml  pytest.ini
backend/phase-1-console/src/: __init__.py
backend/phase-1-console/src/cli/: __init__.py  commands.py  console.py  formatter.py  menu.py
backend/phase-1-console/src/exceptions/: __init__.py  task_error.py  validation_error.py
backend/phase-1-console/src/models/: __init__.py  task.py
backend/phase-1-console/src/services/: __init__.py  task_service.py
backend/phase-1-console/tests/: __init__.py  conftest.py  test_cli_integration.py  test_e2e.py  test_task_model.py  test_task_service.py
backend/phase-2-web/: Dockerfile  README.md  pyproject.toml  pytest.ini
backend/phase-2-web/src/: config.py  db.py  main.py  security.py
backend/phase-2-web/src/api/v1/: analytics.py  auth.py  collaboration.py  search.py  stats.py  tasks.py
backend/phase-2-web/src/api/v1/ws/: __init__.py
backend/phase-2-web/src/models/: schemas.py
backend/phase-2-web/src/services/: auth_service.py
backend/phase-2-web/tests/: conftest.py  test_api.py  test_security.py  test_unit.py
backend/shared/: README.md
deployments/: README.md
docker/: README.md
docs/: API.md  CONSTITUTION.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_HISTORY.md  INSTALL.md
docs/phase-3/: PHASE3-SPEC.md
frontend/: README.md
frontend/phase-2-web/: Dockerfile  README.md  package.json  tailwind.config.js  tsconfig.json
frontend/phase-2-web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
frontend/phase-2-web/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/phase-2-web/.next/server/app/: _not-found.html  _not-found.rsc  dashboard.html  dashboard.rsc  index.html  index.rsc  login.html  login.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js  register.html  register.rsc
frontend/phase-2-web/.next/server/chunks/: 609.js  (+4 more)
frontend/phase-2-web/src/app/: globals.css  layout.tsx  page.tsx
frontend/phase-2-web/src/components/: CreateTaskForm.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  LoginForm.tsx  RegisterForm.tsx  TaskList.tsx
frontend/phase-2-web/src/hooks/: index.ts  useAnalytics.ts  useAuth.ts  useRealtimeTasks.ts  useSearch.ts  useTasks.ts  useWebSocket.ts
frontend/phase-2-web/src/lib/: api-client.ts  api.ts  store.ts  utils.ts  websocket.ts
frontend/phase-2-web/src/theme/: design-system.ts
frontend/shared/: README.md
specs/: PHASE2_SPECIFICATION_SUMMARY.md  PHASE_1_SUMMARY.md  PHASE_1_VERIFICATION.md  README.md
specs/auth/: betterauth.md
specs/backend/: rest-api.md
specs/cli/: console.md
specs/database/: schema.md
specs/deployment/: docker-cicd.md
specs/features/: task-crud.md
specs/frontend/: api-integration.md  nextjs-ui.md
specs/phase-1-console/: README.md
specs/phase-2-web/: README.md
specs/phase-3-chatbot/: README.md
specs/phase-4-kubernetes/: README.md
specs/phase-5-cloud/: README.md
specs/shared/: README.md
specs/tests/: phase1-tests.md
(+166 files in other folders)
