[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolution-of-todo-phase-1"
version = "1.0.0"
description = "Phase 1 Console Application - Evolution of Todo Hackathon Project"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hackathon Team", email = "team@hackathon.dev"}
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/hackathon/evolution-of-todo"
Repository = "https://github.com/hackathon/evolution-of-todo"
Documentation = "https://github.com/hackathon/evolution-of-todo/docs"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --strict-markers --tb=short --cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
